# image_translate

./: pyproject.toml
src/image_translate/: __init__.py
visual-translator/: .gitignore  README.md  analysis.ipynb  main.py  pyproject.toml  requirements.txt  setup.bat
visual-translator/src/: color_utils.py  detector.py  inpainter.py  pipeline.py  renderer.py  translator.py
