[project]
name = "visual-translator"
version = "0.1.0"
description = "Image Translation Pipeline with OCR, Inpainting, and RAG-based Translation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
    "opencv-python>=4.9.0.80",
    "pillow>=10.2.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.8",
    "langchain-community",
    "langchain-mongodb>=0.0.1",
    "langchain-google-genai",
    "pymongo>=4.6.1",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
visual-translator = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
